@@ -557,6 +557,7 @@ END
 STRINGTABLE 
 BEGIN
     IDS_ERR_FILE_OPEN       "Could not open the file\n%s"
+    IDS_ERR_FILE_BINARY     "The File\n%s\nis not a valid text file!"
 END
 
 STRINGTABLE 
